--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -2,7 +2,7 @@
 
 .hero3 {
   background: linear-gradient(rgba(2, 2, 2, 0.336), rgba(10, 11, 12, 0.84)),
-    url("/src/assets/images/hero1.jpeg") 50% no-repeat;
+    url("https://esgnews.com/wp-content/uploads/2024/05/Citi.webp") 50% no-repeat;
   background-size: cover;
   height: 100vh;
   background-attachment: fixed;
@@ -10,7 +10,7 @@
 
   @media (max-width: 600px) {
     background: linear-gradient(rgba(2, 2, 2, 0.336), rgba(10, 11, 12, 0.84)),
-      url("/src/assets/images/hero2.jpeg") 50% no-repeat;
+      url("https://esgnews.com/wp-content/uploads/2024/05/Citi.webp") 50% no-repeat;
     height: 80vh;
     background-size: cover;
   }
@@ -18,7 +18,7 @@
 
 .hero2 {
   background: linear-gradient(rgba(2, 2, 2, 0.336), rgba(10, 11, 12, 0.84)),
-      url("/src/assets/images/hero3.jpeg") 50% no-repeat;
+      url("https://www.retailbankerinternational.com/wp-content/uploads/sites/2/2024/12/CITI-shutterstock_2142900331.jpg") 50% no-repeat;
   background-size: cover;
   height: 80vh;
   height: 100vh;
@@ -27,7 +27,7 @@
 
   @media (max-width: 600px) {
     background: linear-gradient(rgba(2, 2, 2, 0.336), rgba(10, 11, 12, 0.84)),
-      url("/src/assets/images/hero4.jpeg") 50% no-repeat;
+      url("https://www.retailbankerinternational.com/wp-content/uploads/sites/2/2024/12/CITI-shutterstock_2142900331.jpg") 50% no-repeat;
     height: 80vh;
     background-size: cover;
   }
@@ -35,7 +35,7 @@
 
 .hero1 {
   background: linear-gradient(rgba(2, 2, 2, 0.336), rgba(10, 11, 12, 0.84)),
-    url("/src/assets/images/hero5.jpeg") 50% no-repeat;
+    url("https://www.cardexpert.in/wp-content/uploads/2022/03/citi.jpeg") 50% no-repeat;
   background-size: cover;
   height: 100vh;
   background-attachment: fixed;
@@ -43,7 +43,7 @@
 
   @media (max-width: 600px) {
     background: linear-gradient(rgba(2, 2, 2, 0.336), rgba(10, 11, 12, 0.84)),
-      url("/src/assets/images/hero5.jpeg") 50% no-repeat;
+      url("https://www.cardexpert.in/wp-content/uploads/2022/03/citi.jpeg") 50% no-repeat;
     height: 80vh;
     background-size: cover;
   }
